<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/dp_16">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_8"
                app:cardCornerRadius="@dimen/dp_16"
                app:layout_constraintBottom_toTopOf="@+id/clText"
                app:layout_constraintRight_toRightOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imvLogo"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:src="@drawable/ic_logo" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/clText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.dhug.quick_math.base.wiget.AppTextViewBold
                    android:id="@+id/tvQuick"
                    style="@style/TextAutoSp48"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quick" />

                <com.dhug.quick_math.base.wiget.AppTextViewBold
                    style="@style/TextAutoSp48"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/math" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            app:layout_constraintTop_toBottomOf="@+id/clHeader"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                app:layout_constraintTop_toBottomOf="@+id/clHeader"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.dhug.quick_math.base.wiget.AppButtonBold
                    android:id="@+id/btnPlay"
                    style="@style/TextAutoSp24"
                    android:textColor="@color/color_text_button_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_button"
                    android:paddingVertical="@dimen/dp_16"
                    android:layout_marginVertical="@dimen/dp_8"
                    android:text="@string/play"/>

                <com.dhug.quick_math.base.wiget.AppButtonBold
                    android:id="@+id/btnTraining"
                    style="@style/TextAutoSp24"
                    android:textColor="@color/color_text_button_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_button"
                    android:paddingVertical="@dimen/dp_16"
                    android:layout_marginVertical="@dimen/dp_8"
                    android:text="@string/training"/>

                <com.dhug.quick_math.base.wiget.AppButtonBold
                    android:id="@+id/btnAchievements"
                    style="@style/TextAutoSp24"
                    android:textColor="@color/color_text_button_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_button"
                    android:paddingVertical="@dimen/dp_16"
                    android:layout_marginVertical="@dimen/dp_8"
                    android:text="@string/achievements"/>

                <com.dhug.quick_math.base.wiget.AppButtonBold
                    android:id="@+id/btnSetting"
                    style="@style/TextAutoSp24"
                    android:textColor="@color/color_text_button_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_button"
                    android:paddingVertical="@dimen/dp_16"
                    android:layout_marginVertical="@dimen/dp_8"
                    android:text="@string/setting"/>

                <com.dhug.quick_math.base.wiget.AppButtonBold
                    android:id="@+id/btnInformation"
                    style="@style/TextAutoSp24"
                    android:textColor="@color/color_text_button_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_button"
                    android:paddingVertical="@dimen/dp_16"
                    android:layout_marginVertical="@dimen/dp_8"
                    android:text="@string/infomation"/>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>